--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -1,5 +1,7 @@
 {
   "dependencies": {
+    "com.unity.2d.animation": "9.1.1",
+    "com.unity.2d.psdimporter": "8.0.5",
     "com.unity.2d.spriteshape": "9.0.4",
     "com.unity.collab-proxy": "2.4.4",
     "com.unity.feature.development": "1.0.1",
